fix tooltip visibility issue

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -8,6 +8,7 @@
     position: absolute;
     bottom: 0;
     width: 100%;
+    padding: 5px 20px;
 }
 
 .mskcc-footer a,
@@ -18,14 +19,9 @@
     color: #ffffff;
 }
 
-.mskcc-footer {
-    padding-top: 10px;
-    padding-bottom: 10px;
-}
-
 .mskcc-footer a {
     border-right: 0.5px solid #fff;
-    padding: 0 5px;
+    padding: 2px 10px;
 }
 
 .mskcc-footer .row {
